# pii-mask-agent-skills

./: .gitignore  README.md  mask.py  pyproject.toml  requirements-macos.txt  requirements-other.txt  requirements.txt  skill.md
hooks/: pre-read-check.sh
